@@ -1,20 +1,0 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
-
-[Unit]
-Description=@RC_LOCAL_SCRIPT_PATH_STOP@ Compatibility
-ConditionFileIsExecutable=@RC_LOCAL_SCRIPT_PATH_STOP@
-DefaultDependencies=no
-After=shutdown.target
-Before=final.target
-
-[Service]
-Type=oneshot
-ExecStart=@RC_LOCAL_SCRIPT_PATH_STOP@
-TimeoutSec=0
-StandardOutput=tty
-RemainAfterExit=yes
